--- a/resources/sass/customers/pages/shop/heading.scss
+++ b/resources/sass/customers/pages/shop/heading.scss
@@ -374,6 +374,12 @@ ul.shop-filter-menu {
     width: 220px;
 }
 
+.shop-filter-icon-holder { 
+    i.color { 
+        top: -2px !important;
+    }
+}
+
 
  
 }
