--- a/resources/sass/customers/pages/productDetails/main.scss
+++ b/resources/sass/customers/pages/productDetails/main.scss
@@ -7,6 +7,10 @@ padding: 50px 20px 0px;
     @import "./related.scss";
     @import "./images.scss";
     @import "./informations.scss";
+
+    @media(max-width:768px) { 
+        padding: 20px 20px 0px !important;
+    }
 }
 
 
