--- a/resources/sass/customers/pages/shop/pagination.scss
+++ b/resources/sass/customers/pages/shop/pagination.scss
@@ -87,6 +87,12 @@
 
     .disabled {
     
-        background-color: #efefef !important;
+        opacity: .2 ;
+        // background-color: #efefef !important;
+        &:hover { 
+            background-color: #d2d2d2 !important;
+            cursor: text;
+       
+        }
     }
 }
