--- a/resources/sass/admins/designing/pages/_products.scss
+++ b/resources/sass/admins/designing/pages/_products.scss
@@ -28,6 +28,7 @@
 
 
 
+
     .active_link {
         color: $primary !important;
     }
@@ -38,4 +39,7 @@
 }
 
 
+.size-guides-section { 
+    display: none;
+}
 
