--- a/resources/sass/customers/pages/productDetails/images.scss
+++ b/resources/sass/customers/pages/productDetails/images.scss
@@ -56,6 +56,39 @@
      
             border: 3px solid gold;   
         }
+
+        .owl-nav {
+            margin-top: 0px !important;
+            button {
+                position: absolute;
+                top: calc(50% - 20px );
+                background: white;
+                padding: 8px 6px 10px !important;
+                border-radius: 0% !important;
+                opacity: 0.8;
+                transition: 0.2s all ease;
+                margin: 0px !important;
+
+                i {
+                    color: $black-gray !important;
+                    font-size: 12px !important;
+                }
+                &:nth-child(1) {
+                    left: 0px;
+                }
+
+                &:nth-child(2) {
+                    right: 0px;
+                }
+                &:hover {
+                    opacity: 1;
+                }
+            }
+
+            svg {
+                width: 8px !important;
+            }
+        }
     }
 
 
