--- a/resources/sass/customers/include/designing/navbar/actions.scss
+++ b/resources/sass/customers/include/designing/navbar/actions.scss
@@ -31,7 +31,7 @@
                 border: none;
                 display: inline-block;
                 width: 93%;
-                border: 1px solid $hr-color;
+                border: 1px solid #dfdfdf;
                 border-radius: 0px !important;
 
                 @extend .no-focus;
