--- a/resources/sass/customers/pages/productDetails/informations.scss
+++ b/resources/sass/customers/pages/productDetails/informations.scss
@@ -47,17 +47,17 @@
                     cursor: pointer;
                     transition: 0.3s all ease;
                     display: inline-block;
-                    border-radius: 50%;
+                  
                     padding: 2px;
                     margin-right: 5px;
                     margin-top: 5px;
                     border: 1px solid white;
 
                     .color-block {
-                        height: 22px;
-                        width: 22px;
+                        height: 25px;
+                        width: 25px;
 
-                        border-radius: 50%;
+                 
                     }
                  
                 }
@@ -68,8 +68,8 @@
                     cursor: text !important;
                     .strock {
                         height: 1px;
-                        background-color: #e9e9ed;
-                        padding: 1px;
+                        background-color: $black-gray;
+                      
                         -ms-transform: rotate(45deg);
                         -webkit-transform: rotate(45deg);
                         transform: rotate(45deg);
