add the last admins handling (not including ui + images + father record)

--- a/public/css/admins.css
+++ b/public/css/admins.css
@@ -98,6 +98,10 @@
     font-size: 22px;
   }
 }
+.chip-font {
+  color: rgb(152, 151, 151) !important;
+}
+
 .validation-icon {
   font-size: 15px !important;
   color: #e17878 !important;
